--- a/AkaneFacialOSC/App.xaml
+++ b/AkaneFacialOSC/App.xaml
@@ -1,30 +1,40 @@
-﻿<Application x:Class="AZW.FacialOSC.App"
+﻿<Application x:Class="Azw.FacialOsc.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AZW.FacialOSC"
+             xmlns:local="clr-namespace:Azw.FacialOsc"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:properties="clr-namespace:AZW.FacialOSC.Properties"
+             xmlns:properties="clr-namespace:Azw.FacialOsc.Properties"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Dark" PrimaryColor="Pink" SecondaryColor="Lime" />
+                <!--MahApps.Metro-->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+
+                <!--MaterialDesignTheme-->
+                <materialDesign:CustomColorTheme BaseTheme="Dark" PrimaryColor="#e05a8d" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
 
+                <!--MaterialDesignTheme.MahApps-->
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.MahApps;component/Themes/MaterialDesignTheme.MahApps.Defaults.xaml"/>
+
             </ResourceDictionary.MergedDictionaries>
-            <!-- primary -->
-            <SolidColorBrush x:Key="PrimaryHueLightBrush" Color="#f997b6" />
-            <SolidColorBrush x:Key="PrimaryHueLightForegroundBrush" Color="#fdd835" />
-            <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="#e05a8d" /><!-- default: e91e63 -->
-            <SolidColorBrush x:Key="PrimaryHueMidForegroundBrush" Color="#DDFFFFFF" />
-            <SolidColorBrush x:Key="PrimaryHueDarkBrush" Color="#bb002f" />
-            <!--<SolidColorBrush x:Key="PrimaryHueDarkForegroundBrush" Color="#fdd835" />-->
-            <!-- accent -->
-            <SolidColorBrush x:Key="SecondaryHueMidBrush" Color="#304ffe" />
-            <SolidColorBrush x:Key="SecondaryHueMidForegroundBrush" Color="#ff6d00" />
+
+            <!-- MahApps Brushes -->
+            <SolidColorBrush x:Key="WindowTitleBrush" Color="#e05a8d"/>
+            <SolidColorBrush x:Key="NonActiveWindowTitleBrush" Color="#812a5d"/>
+            <SolidColorBrush x:Key="WindowBorderBrush" Color="#abca79"/>
             <Style TargetType="TextBlock">
                 <Setter Property="FontFamily" Value="Source Han Sans" />
                 <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
+            </Style>
+            <Style TargetType="Hyperlink">
+                <Setter Property="Foreground" Value="{Binding Foreground,RelativeSource={RelativeSource FindAncestor,AncestorType=TextBlock}}"/>
+                <Setter Property="TextDecorations" Value=""/>
             </Style>
             <FontFamily x:Key="ContentControlThemeFontFamily">Yu Gothic</FontFamily>
         </ResourceDictionary>
