--- a/AkaneFacialOSC/MainWindow.xaml
+++ b/AkaneFacialOSC/MainWindow.xaml
@@ -49,7 +49,7 @@
                     <ColumnDefinition Width="2*" MinWidth="180"/>
                     <ColumnDefinition Width="2*" MinWidth="180"/>
                     <ColumnDefinition Width="40"/>
-                    <ColumnDefinition Width="100"/>                    
+                    <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
                 <Border Grid.Column="0" Name="dummyWidthCheckBox"/>
                 <Border Grid.Column="1" Name="dummyWidthKey"/>
@@ -59,7 +59,14 @@
                 <Border Grid.Column="5" Name="dummyWidthClipping"/>
                 <Border Grid.Column="6" Name="dummyWidthCenter"/>
             </Grid>
-            <ListBox x:Name="FilterList" ItemsSource="{Binding FilterList}" SelectionMode="Multiple" SelectionChanged="Filter_Clicked"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <ListBox Grid.Row="0" x:Name="FilterList" ItemsSource="{Binding FilterList}" SelectionMode="Multiple" SelectionChanged="Filter_Clicked" VerticalAlignment="Stretch" VerticalContentAlignment="Stretch"/>
+                <CheckBox Grid.Row="1" x:Name="SelectAll" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ConfigSelectAll, Mode=OneWay}" Checked="BulkCheckBox_Checked" Unchecked="BulkCheckBox_UnChecked" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom"/>
+            </Grid>
             <ListView Grid.Row="0"
                   Grid.Column="1"
                   Focusable="False"
