--- a/AkaneFacialOSC/MainWindow.xaml
+++ b/AkaneFacialOSC/MainWindow.xaml
@@ -68,7 +68,7 @@
                 <ListBox Grid.Row="0" x:Name="FilterList" 
                           SelectedValuePath="Key"
                           DisplayMemberPath="Value" ItemsSource="{Binding FilterList, Converter={StaticResource OscFiltgerToLabel}}" SelectionMode="Multiple" SelectionChanged="Filter_Clicked" VerticalAlignment="Stretch" VerticalContentAlignment="Stretch"/>
-                <CheckBox Grid.Row="1" x:Name="SelectAll" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ConfigSelectAll, Mode=OneWay}" Checked="BulkCheckBox_Checked" Unchecked="BulkCheckBox_UnChecked" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom"/>
+                <CheckBox Grid.Row="1" x:Name="SelectAll" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ConfigSelectAll, Mode=OneWay}" Click="BulkCheckBox_Clicked" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom"/>
             </Grid>
             <ListView Grid.Row="0"
                   Grid.Column="1"
@@ -111,8 +111,7 @@
                                         Content=""
                                         VerticalAlignment="Center"
                                         IsChecked="{Binding IsSending}"
-                                        Checked="MarkDirty"
-                                        Unchecked="MarkDirty" />
+                                        Click="IsSendingCheckBox_Clicked" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
