--- a/AkaneFacialOSC/MainWindow.xaml
+++ b/AkaneFacialOSC/MainWindow.xaml
@@ -22,7 +22,7 @@
         xmlns:properties="clr-namespace:Azw.FacialOsc.Properties"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         TitleCharacterCasing="Normal" 
-        Title="AkaneFacialOSC" Height="800" MinHeight="450" Width="940" MinWidth="940">
+        Title="AkaneFacialOSC" Height="940" MinHeight="450" Width="940" MinWidth="940">
     <Window.Resources>
         <local:CenterToLabelConverter x:Key="CenterToLabel"/>
         <local:DeviceStatusToColorConverter x:Key="DeviceStatusToColor"/>
@@ -293,19 +293,19 @@
                     <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="Eye" />
                     <TextBlock Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="Face"/>
 
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"  Text="Target fps" />
+                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"  Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.LabelTargetFps, Mode=OneWay}" />
                     <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Text="0.000"        x:Name="eyeTargetFps"/>
                     <TextBlock Grid.Row="1" Grid.Column="2" HorizontalAlignment="Left"  Text="fps "         Margin="5 0 0 0"/>
                     <TextBlock Grid.Row="1" Grid.Column="3" HorizontalAlignment="Right" Text="0.000"        x:Name="lipTargetFps"/>
                     <TextBlock Grid.Row="1" Grid.Column="4" HorizontalAlignment="Left"  Text="fps "         Margin="5 0 0 0"/>
 
-                    <TextBlock Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"  Text="Application fps" />
+                    <TextBlock Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"  Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.LabelApplicationFps, Mode=OneWay}" />
                     <TextBlock Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Text="0.000"        x:Name="eyeAppFps"/>
                     <TextBlock Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left"  Text="fps "         Margin="5 0 0 0"/>
                     <TextBlock Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Text="0.000"        x:Name="lipAppFps"/>
                     <TextBlock Grid.Row="2" Grid.Column="4" HorizontalAlignment="Left"  Text="fps "         Margin="5 0 0 0"/>
 
-                    <TextBlock Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left"  Text="Device fps" />
+                    <TextBlock Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left"  Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.LabelDeviceFps, Mode=OneWay}" />
                     <TextBlock Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" Text="0.000"        x:Name="eyeDeviceFps"/>
                     <TextBlock Grid.Row="3" Grid.Column="2" HorizontalAlignment="Left"  Text="fps "         Margin="5 0 0 0"/>
                     <TextBlock Grid.Row="3" Grid.Column="3" HorizontalAlignment="Right" Text="0.000"        x:Name="lipDeviceFps"/>
